--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">DicePointCounter</string>
+    <string name="player">Player %1$s</string>
+    <string name="add_player">Add Player</string>
+    <string name="start_game">Start Game</string>
+    <string name="add_points_for">Add points for %1$s</string>
+    <string name="points">Points</string>
+    <string name="ok">Ok</string>
+    <string name="cancel">Cancel</string>
 </resources>
