--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,6 @@
     <string name="start_game">Start Game</string>
     <string name="add_points_for">Add points for %1$s</string>
     <string name="points">Points</string>
-    <string name="ok">Ok</string>
     <string name="cancel">Cancel</string>
+    <string name="revert_points_for">Revert points for %1$s</string>
 </resources>
