--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="points">Points</string>
     <string name="cancel">Cancel</string>
     <string name="revert_points_for">Revert points for %1$s</string>
+    <string name="invalid_number">Invalid number</string>
 </resources>
