--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Dice points</string>
+    <string name="app_name">Dice Points</string>
     <string name="player">Player %1$s</string>
     <string name="add_player">Add Player</string>
     <string name="start_game">Start Game</string>
